Bug 86225 - [SNB+]igt/gem_reset_stats/defer-hangcheck-blt fails
Summary: [SNB+]igt/gem_reset_stats/defer-hangcheck-blt fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-13 01:38 UTC by lu hua
Modified: 2017-10-06 14:33 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (91.65 KB, text/plain)
2014-11-13 01:38 UTC, lu hua
no flags Details

Description lu hua 2014-11-13 01:38:11 UTC
Created attachment 109373 [details]
dmesg

==System Environment==
--------------------------
Regression: no, new case
Non-working platforms:  SNB+

==kernel==
--------------------------
drm-intel-nightly/9a7620f405895714b4e0dc3181a8328b4406287e

==Bug detailed description==
It fail on SNB+ platforms.

gem_reset_stats/defer-hangcheck-bsd and gem_reset_stats/defer-hangcheck-render also fail.

output:
IGT-Version: 1.8-g50d539e (x86_64) (Linux: 3.18.0-rc2_drm-intel-nightly_203b34_20141103+ x86_64)
Test assertion failure function defer_hangcheck, file gem_reset_stats.c:1056:
Failed assertion: count_end > count_start
Subtest defer-hangcheck-blt: FAIL (29.422s)
Test requirement not met in function gem_require_ring, file ioctl_wrappers.c:881:
Test requirement: gem_has_vebox(fd)
Warning on condition flags != 0 in fucntion check_stop_rings, file drmtest.c:112
i915_ring_stop flags on exit 0x80000004, can't quiescent gpu cleanly

==Reproduce steps==
---------------------------- 
1. ./gem_reset_stats --run-subtest defer-hangcheck-blt
Comment 1 lu hua 2014-11-14 01:27:13 UTC
igt/gem_reset_stats/defer-hangcheck-render also fails on ILK.
Comment 2 Chris Wilson 2014-11-19 09:48:42 UTC
http://patchwork.freedesktop.org/patch/37111/
Comment 3 Daniel Vetter 2014-11-19 10:45:20 UTC
Fix landed in dinq

commit 672e7b7c1849c904b2c55185906b3940843c55c6
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Nov 19 09:47:19 2014 +0000

    drm/i915: Don't continually defer the hangcheck
Comment 4 Guo Jinxian 2014-11-20 03:18:15 UTC
(In reply to Daniel Vetter from comment #3)
> Fix landed in dinq
> 
> commit 672e7b7c1849c904b2c55185906b3940843c55c6
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Wed Nov 19 09:47:19 2014 +0000
> 
>     drm/i915: Don't continually defer the hangcheck

Test still fails on latest -nightly(cdb41f33d2a189531e3561f8d40327b8e1bb4e0e), which contains the commit above.

[root@x-hsw24 tests]# ./gem_reset_stats --run-subtest defer-hangcheck-blt
IGT-Version: 1.8-gd807891 (x86_64) (Linux: 3.18.0-rc5_kcloud_cdb41f_20141120+ x86_64)
Test assertion failure function defer_hangcheck, file gem_reset_stats.c:1056:
Failed assertion: count_end > count_start
Subtest defer-hangcheck-blt: FAIL (29.003s)
Warning on condition flags != 0 in fucntion check_stop_rings, file drmtest.c:112
i915_ring_stop flags on exit 0x80000004, can't quiescent gpu cleanly
Comment 5 Daniel Vetter 2014-11-20 14:26:21 UTC
I've horribly broken things by accident this night around hangcheck (for unrelated reasons). Should be fixed again, please retest.
Comment 6 lu hua 2014-11-25 07:45:36 UTC
Test on HSW, it works well.
[root@x-hsw24 tests]# ./gem_reset_stats --run-subtest defer-hangcheck-blt
IGT-Version: 1.8-gd807891 (x86_64) (Linux: 3.18.0-rc6_drm-intel-nightly_ab4b25_20141125+ x86_64)
Subtest defer-hangcheck-blt: SUCCESS (6.002s)
[root@x-hsw24 tests]# ./gem_reset_stats --run-subtest defer-hangcheck-bsd
IGT-Version: 1.8-gd807891 (x86_64) (Linux: 3.18.0-rc6_drm-intel-nightly_ab4b25_20141125+ x86_64)
Subtest defer-hangcheck-bsd: SUCCESS (7.001s)
[root@x-hsw24 tests]# ./gem_reset_stats --run-subtest defer-hangcheck-render
IGT-Version: 1.8-gd807891 (x86_64) (Linux: 3.18.0-rc6_drm-intel-nightly_ab4b25_20141125+ x86_64)
Subtest defer-hangcheck-render: SUCCESS (6.001s)
Comment 7 Elizabeth 2017-10-06 14:33:56 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.